--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
 	// Building
-	id 'net.fabricmc.fabric-loom-remap' version "${loom_version}"
+	id 'net.fabricmc.fabric-loom-remap'
 	id "de.hysky.skyblocker.annotation-processor"
 	id "com.diffplug.spotless" version "${spotless_version}"
 	id "checkstyle"
@@ -142,7 +142,14 @@ dependencies {
 	// To change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 
-	mappings loom.officialMojangMappings()
+	if (stonecutter.current.version == "1.21.10") {
+		mappings loom.layered {
+			officialMojangMappings()
+			mappings file("skyblocker-override.tiny")
+		}
+	} else {
+		mappings loom.officialMojangMappings()
+	}
 
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
@@ -203,6 +210,14 @@ dependencies {
 	// Apache Commons Text
 	include implementation("org.apache.commons:commons-text:${project.commons_text_version}")
 
+	if (stonecutter.current.version == '1.21.10') {
+		// JSpecify Annotations
+		include implementation("org.jspecify:jspecify:1.0.0")
+
+		// FastUtil
+		include implementation("it.unimi.dsi:fastutil:8.5.18")
+	}
+
 	// Fabric Language Kotlin for using MoulConfig - we are still a Java-exclusive mod
 	modImplementation("net.fabricmc:fabric-language-kotlin:${project.flk_version}")
 }
@@ -221,6 +236,12 @@ loom {
 					"mark-corresponding-synthetics", "1"
 					)
 		}
+	}
+
+	runConfigs.all {
+		ideConfigGenerated(true)
+		client()
+		runDir = "../../run" // Shares the run directory between versions
 	}
 }
 
@@ -247,6 +268,9 @@ processResources {
 
 tasks.withType(JavaCompile).configureEach {
 	it.options.release = 21
+	if (stonecutter.current.version == "1.21.10") {
+		it.options.compilerArgs << "-Xmaxerrs" << "2000"
+	}
 }
 
 java {
@@ -281,8 +305,8 @@ spotless {
 
 		gson().sortByKeys().indentWithSpaces(2)
 		// Note: a stem is a part of a key between dots, e.g. "skyblocker.config.chat" has three stems: "skyblocker", "config", and "chat".
-		replaceRegex \
-				"Separate different first stems",
+		replaceRegex  \
+				 "Separate different first stems",
 				// Explanation of the regex:
 				// `^(  "`: matches the start of a line, begins capture group 1, and matches two spaces and a double quote
 				// `([^."]++)`: captures the first stem (everything before the first dot) in group 2
@@ -295,21 +319,21 @@ spotless {
 				// The last `[."]` is to ensure that the `\2` in the negative lookahead is being matched against an entire stem, not just the starting part of a stem.
 				/^(  "([^."]++)(?:\.[^"]++)?": "(?:[^\\"]++|\\.)*+",)$\n^(?=  "(?!\2[."]))/,
 				'$1\n\n'
-		replaceRegex \
-				"Separate different second stems if the first stem is skyblocker",
+		replaceRegex  \
+				 "Separate different second stems if the first stem is skyblocker",
 				// The main difference is that the second and remaining stems are optional, allowing matching lines with only one stem (in this case "skyblocker"), and separating it from other keys that start with "skyblocker.[whatever]".
 				// This treats keys with only one stem as if they have an empty second stem, which is considered different from any other second stem, therefore inserting a newline after them.
 				/^(  "skyblocker(?:\.([^."]++)(?:\.[^"]++)?)?": "(?:[^\\"]++|\\.)*+",)$\n^(?=  "skyblocker\.(?!\2[."]))/,
 				'$1\n\n'
-		replaceRegex \
-				"Separate different thrid stems if the first two stems are skyblocker.config",
+		replaceRegex  \
+				 "Separate different thrid stems if the first two stems are skyblocker.config",
 				// The third and remaining stems are optional, allowing matching lines with only two stems (in this case "skyblocker.config"), and separating it from other keys that start with "skyblocker.config.[whatever]".
 				/^(  "skyblocker\.config(?:\.([^."]++)(?:\.[^"]++)?)?": "(?:[^\\"]++|\\.)*+",)$\n^(?=  "skyblocker\.config\.(?!\2[."]))/,
 				'$1\n\n'
 		final List<String> excludeCategories = ["debug", "eventNotifications", "quickNav", "shortcutToKeybindsSettings", "title"]
 		final String excludeCategoriesLookahead = /(?!(?:${excludeCategories.join('|')})(?=[."]))/
-		replaceRegex \
-				"Separate different fouth stems if the first three stems are skyblocker.config.[configCategory]",
+		replaceRegex  \
+				 "Separate different fouth stems if the first three stems are skyblocker.config.[configCategory]",
 				// A negative lookahead is used before the third stem to exclude the above list of third stems.
 				// The fourth and remaining stems are optional, allowing matching lines with only three stems (such as "skyblocker.config.[configCategory]"), and separating them from other keys that start with "skyblocker.config.[configCategory].[whatever]".
 				// This treats keys with only three stems as if they have an empty fourth stem, which is considered different from any other fourth stem, therefore inserting a newline after them.
@@ -321,8 +345,8 @@ spotless {
 
 	groovyGradle {
 		target 'src/**/*.gradle', '*.gradle', 'gradle/*.gradle'
-		greclipse().configProperties \
-				'groovy.formatter.multiline.indentation=2', // Default
+		greclipse().configProperties  \
+				 'groovy.formatter.multiline.indentation=2', // Default
 				'groovy.formatter.line.maxlength=999',
 				'groovy.formatter.longListLength=999',
 				'groovy.formatter.remove.unnecessary.semicolons=true'
@@ -333,7 +357,7 @@ checkstyle {
 	toolVersion = "${checkstyle_version}"
 	configFile = rootProject.file("checkstyle.xml")
 	configProperties = [
-		"suppressionsFile": rootProject.file("checkstyle-suppressions.xml")
+			"suppressionsFile": rootProject.file("checkstyle-suppressions.xml")
 	]
 }
 
