--- a/gradle.properties
+++ b/gradle.properties
@@ -2,32 +2,8 @@ org.gradle.jvmargs=-Xmx1G -Dfile.encoding=UTF-8 -Duser.language=en -Duser.countr
 org.gradle.parallel=true
 org.gradle.configuration-cache=false
 
-# Fabric Properties (https://fabricmc.net/versions.html)
-minecraft_version=1.21.11
-loader_version=0.18.2
-loom_version=1.14-SNAPSHOT
-
-# Fabric API
-fabric_api_version=0.140.0+1.21.11
-
-# Minecraft Mods
-## Dandelion
-dandelion_version=1.0.0-alpha.11+1.21.11
-## YACL (https://github.com/isXander/YetAnotherConfigLib)
-yacl_version=3.8.1+1.21.11
-## MoulConfig (https://github.com/NotEnoughUpdates/MoulConfig)
-moulconfig_flavour=modern-1.21.7
-moulconfig_version=4.0.1-beta
-## HM API (https://github.com/AzureAaron/hm-api)
-hm_api_version=1.0.1+1.21.2
-## Mod Menu (https://modrinth.com/mod/modmenu/versions)
-mod_menu_version = 17.0.0-alpha.1
-## REI (https://modrinth.com/mod/rei/versions?l=fabric)
-rei_version = 19.0.806
-## EMI (https://modrinth.com/mod/emi/versions)
-emi_version = 1.1.10+1.21
-## JEI (https://modrinth.com/mod/jei/versions)
-jei_version = 26.1.0.16
+# silence limited Groovy support message
+dev.kikugie.stonecutter.hard_mode=true
 
 # Minecraft and Related Libraries
 ## McDev Annotations (https://central.sonatype.com/artifact/com.demonwav.mcdev/annotations)
@@ -46,8 +22,6 @@ flk_version=1.13.7+kotlin.2.2.21
 jgit_version = 7.4.0.202509020913-r
 ## Apache Commons Math (https://mvnrepository.com/artifact/org.apache.commons/commons-math3)
 commons_math_version = 3.6.1
-## Apache Commons Text (https://mvnrepository.com/artifact/org.apache.commons/commons-text)
-commons_text_version = 1.15.0
 
 # Miscellaneous Gradle Plugins
 ## Spotless (https://github.com/diffplug/spotless)
