--- a/settings.gradle
+++ b/settings.gradle
@@ -1,10 +1,25 @@
 pluginManagement {
 	repositories {
 		maven {
-			name = 'Fabric'
-			url = 'https://maven.fabricmc.net/'
+			name = "Fabric"
+			url = "https://maven.fabricmc.net/"
+		}
+		maven {
+			name = "KikuGie Snapshots"
+			url = "https://maven.kikugie.dev/snapshots"
 		}
 		mavenCentral()
 		gradlePluginPortal()
+	}
+}
+
+plugins {
+	id("dev.kikugie.stonecutter") version "0.7.11"
+}
+
+stonecutter {
+	create(getRootProject()) {
+		versions("1.21.10", "1.21.11")
+		vcsVersion = "1.21.11"
 	}
 }
