--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,8 @@ org.gradle.configuration-cache=false
 # silence limited Groovy support message
 dev.kikugie.stonecutter.hard_mode=true
 
+loader_version=0.18.2
+
 # Minecraft and Related Libraries
 ## McDev Annotations (https://central.sonatype.com/artifact/com.demonwav.mcdev/annotations)
 mcdev_annotations_version = 2.1.0
