--- a/versions/26.1/gradle.properties
+++ b/versions/26.1/gradle.properties
@@ -6,7 +6,7 @@ fabric_api_version=0.141.2+26.1
 
 # Minecraft Mods
 ## Dandelion
-dandelion_version=1.0.0-alpha.12+1.21.11
+dandelion_version=1.0.0-alpha.12+26.1-snapshot-3
 ## YACL (https://github.com/isXander/YetAnotherConfigLib)
 yacl_version=3.8.2+26.1.0
 ## HM API (https://github.com/AzureAaron/hm-api)
