--- a/versions/26.1/gradle.properties
+++ b/versions/26.1/gradle.properties
@@ -8,7 +8,7 @@ dandelion_version=1.0.0-alpha.12+26.1-snapshot-3
 ## YACL (https://github.com/isXander/YetAnotherConfigLib)
 yacl_version=3.8.2+26.1.0
 ## HM API (https://github.com/AzureAaron/hm-api)
-hm_api_version=1.0.1+1.21.2
+hm_api_version=1.0.1+26.1-snapshot-4
 ## Mod Menu (https://modrinth.com/mod/modmenu/versions)
 mod_menu_version = 18.0.0-alpha.4
 ## REI (https://modrinth.com/mod/rei/versions?l=fabric)
