--- a/build-unobf.gradle
+++ b/build-unobf.gradle
@@ -302,6 +302,7 @@ base {
 }
 
 processResources {
+	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 	inputs.property "version", project.version
 
 	filesMatching("fabric.mod.json") {
