--- a/build.gradle
+++ b/build.gradle
@@ -256,6 +256,7 @@ base {
 }
 
 tasks.withType(ProcessResources).configureEach {
+	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 	inputs.property "version", project.version
 
 	filesMatching("fabric.mod.json") {
